wip: manifest kubernetes-vagrant

--- a/extra_playbooks/roles/generate-ssh-config/defaults/main.yml
+++ b/extra_playbooks/roles/generate-ssh-config/defaults/main.yml
@@ -1,2 +1,3 @@
 boss__generate__ssh__config__user: vagrant
 boss__generate__ssh__config__group: vagrant
+boss__generate__ssh__config__ssh_private_key: ~/.ssh/vagrant_id_rsa
