--- a/ssh_config.kubernetes-cluster.conf
+++ b/ssh_config.kubernetes-cluster.conf
@@ -4,33 +4,8 @@ Host k8s-node-2*
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
     PasswordAuthentication no
-    IdentityFile     IdentitiesOnly yes
-    LogLevel FATAL
-    ControlMaster auto
-    ControlPath ~/.ansible/cp/ansible-ssh-%h-%p-%r
-    ControlPersist 30m
-    PreferredAuthentications publickey
-    ForwardAgent yes
-Host k8s-head*
-    User vagrant
-    Port 22
-    UserKnownHostsFile /dev/null
-    StrictHostKeyChecking no
-    PasswordAuthentication no
-    IdentityFile     IdentitiesOnly yes
-    LogLevel FATAL
-    ControlMaster auto
-    ControlPath ~/.ansible/cp/ansible-ssh-%h-%p-%r
-    ControlPersist 30m
-    PreferredAuthentications publickey
-    ForwardAgent yes
-Host *
-    User vagrant
-    Port 22
-    UserKnownHostsFile /dev/null
-    StrictHostKeyChecking no
-    PasswordAuthentication no
-    IdentityFile     IdentitiesOnly yes
+    IdentityFile ~/.ssh/vagrant_id_rsa
+    IdentitiesOnly yes
     LogLevel FATAL
     ControlMaster auto
     ControlPath ~/.ansible/cp/ansible-ssh-%h-%p-%r
@@ -43,7 +18,22 @@ Host k8s-node-1*
     UserKnownHostsFile /dev/null
     StrictHostKeyChecking no
     PasswordAuthentication no
-    IdentityFile     IdentitiesOnly yes
+    IdentityFile ~/.ssh/vagrant_id_rsa
+    IdentitiesOnly yes
+    LogLevel FATAL
+    ControlMaster auto
+    ControlPath ~/.ansible/cp/ansible-ssh-%h-%p-%r
+    ControlPersist 30m
+    PreferredAuthentications publickey
+    ForwardAgent yes
+Host k8s-head*
+    User vagrant
+    Port 22
+    UserKnownHostsFile /dev/null
+    StrictHostKeyChecking no
+    PasswordAuthentication no
+    IdentityFile ~/.ssh/vagrant_id_rsa
+    IdentitiesOnly yes
     LogLevel FATAL
     ControlMaster auto
     ControlPath ~/.ansible/cp/ansible-ssh-%h-%p-%r
