--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -839,6 +839,20 @@ boss__external__dns__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/
 # boss__external__dns__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
 boss__external__dns__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
+
+
+##########################################################################################################
+#              .##.....##.########.##.......##.....##
+#              .##.....##.##.......##.......###...###
+#              .##.....##.##.......##.......####.####
+#              .#########.######...##.......##.###.##
+#              .##.....##.##.......##.......##.....##
+#              .##.....##.##.......##.......##.....##
+#              .##.....##.########.########.##.....##
+##########################################################################################################
+boss__helm__subdomain: helm
+boss__helm__manifest_path: "{{manifest_dir_path}}/helm"
+boss__helm__namespace_name: kube-system
 # ---
 # local_release_dir: /tmp/releases
 
