--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -853,6 +853,20 @@ boss__external__dns__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 boss__helm__subdomain: helm
 boss__helm__manifest_path: "{{manifest_dir_path}}/helm"
 boss__helm__namespace_name: kube-system
+
+##########################################################################################################
+#     .##.....##.########.########....###....##...............##.......########.
+#     .###...###.##..........##......##.##...##...............##.......##.....##
+#     .####.####.##..........##.....##...##..##...............##.......##.....##
+#     .##.###.##.######......##....##.....##.##.......#######.##.......########.
+#     .##.....##.##..........##....#########.##...............##.......##.....##
+#     .##.....##.##..........##....##.....##.##...............##.......##.....##
+#     .##.....##.########....##....##.....##.########.........########.########.
+##########################################################################################################
+boss__metallb__subdomain: metallb
+boss__metallb__manifest_path: "{{manifest_dir_path}}/metallb"
+boss__metallb__namespace_name: metallb-system
+boss__metallb__address_pools: '192.168.1.246-192.168.1.254'
 # ---
 # local_release_dir: /tmp/releases
 
