--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -870,6 +870,74 @@ boss__metallb__subdomain: metallb
 boss__metallb__manifest_path: "{{manifest_dir_path}}/metallb"
 boss__metallb__namespace_name: metallb-system
 boss__metallb__address_pools: '192.168.205.10-192.168.205.12'
+
+
+
+##########################################################################################################
+#              .##....##..######...####.##....##.##.....##.........####.##....##..######...########..########..######...######.
+#              .###...##.##....##...##..###...##..##...##...........##..###...##.##....##..##.....##.##.......##....##.##....##
+#              .####..##.##.........##..####..##...##.##............##..####..##.##........##.....##.##.......##.......##......
+#              .##.##.##.##...####..##..##.##.##....###....#######..##..##.##.##.##...####.########..######....######...######.
+#              .##..####.##....##...##..##..####...##.##............##..##..####.##....##..##...##...##.............##.......##
+#              .##...###.##....##...##..##...###..##...##...........##..##...###.##....##..##....##..##.......##....##.##....##
+#              .##....##..######...####.##....##.##.....##.........####.##....##..######...##.....##.########..######...######.
+##########################################################################################################
+boss__ingress__nginx__subdomain: ingress-nginx
+boss__ingress__nginx__manifest_path: "{{manifest_dir_path}}/ingress-nginx"
+boss__ingress__nginx__namespace_name: kube-system
+
+boss__ingress__nginx__controller_version: 0.21.0
+boss__ingress__nginx__controller_image_repo: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller"
+boss__ingress__nginx__controller_image_tag: "{{ boss__ingress__nginx__controller_version }}"
+
+boss__ingress__nginx__controller_runAsUser: 33
+
+boss__ingress__nginx__deployment_labels: |
+    app.kubernetes.io/name: nginx-ingress-controller
+    # app.kubernetes.io/part-of: kube-system
+    app.kubernetes.io/part-of: nginx-ingress
+    addonmanager.kubernetes.io/mode: Reconcile
+boss__ingress__nginx__deployment_spec_replicas: 1
+boss__ingress__nginx__deployment_spec_selector_match_labels: |
+      app.kubernetes.io/name: nginx-ingress-controller
+      # app.kubernetes.io/part-of: kube-system
+      app.kubernetes.io/part-of: nginx-ingress
+      addonmanager.kubernetes.io/mode: Reconcile
+boss__ingress__nginx__deployment_spec_template_metadata_labels: |
+        app.kubernetes.io/name: nginx-ingress-controller
+        # app.kubernetes.io/part-of: kube-system
+        app.kubernetes.io/part-of: nginx-ingress
+        addonmanager.kubernetes.io/mode: Reconcile
+boss__ingress__nginx__deployment_spec_template_metadata_annotations: |
+        prometheus.io/port: "10254"
+        prometheus.io/scrape: "true"
+boss__ingress__nginx__deployment_spec_template_spec_node_selector: |
+        kubernetes.io/hostname: "k8s-head"
+
+boss__ingress__nginx__service_account_labels: |
+    addonmanager.kubernetes.io/mode: Reconcile
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
+
+boss__ingress__nginx__service_default_http_backend_spec_type: NodePort
+boss__ingress__nginx__service_ingress_nginx_spec_type: NodePort
+
+boss__ingress__nginx__role_binding_labels: |
+    # SOURCE: https://kubernetes.io/docs/reference/access-authn-authz/rbac/
+    # Many of these are system: prefixed, which indicates that the resource is “owned” by the infrastructure. Modifications to these resources can result in non-functional clusters. One example is the system:node ClusterRole. This role defines permissions for kubelets. If the role is modified, it can prevent kubelets from working.
+    # All of the default cluster roles and rolebindings are labeled with kubernetes.io/bootstrapping=rbac-defaults
+    kubernetes.io/bootstrapping: rbac-defaults
+    addonmanager.kubernetes.io/mode: EnsureExists
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
+
+boss__ingress__nginx__service__default_http_backend_labels: |
+    app.kubernetes.io/name: default-http-backend
+    # app.kubernetes.io/part-of: kube-system
+    app.kubernetes.io/part-of: nginx-ingress
+    # kubernetes.io/minikube-addons: ingress
+    # kubernetes.io/minikube-addons-endpoint: ingress
+    addonmanager.kubernetes.io/mode: Reconcile
 # ---
 # local_release_dir: /tmp/releases
 
