--- a/vars/clear/scarlett-k8_manifest.yml
+++ b/vars/clear/scarlett-k8_manifest.yml
@@ -1,4 +1,4 @@
-domain_root: hyenaclan.org
+domain_root: rpilab.com
 
 base_dir_path: ~/dev/bossjones/bosslab-playbooks
 dist_dir_path: "{{base_dir_path}}/dist"
@@ -958,6 +958,25 @@ boss__markdownrender__namespace_name: default
 boss__markdownrender__version: latest-armhf
 boss__markdownrender__image_repo: "functions/markdownrender"
 boss__markdownrender__image_tag: "{{ boss__markdownrender__version }}"
+
+
+
+####################################################################################################
+#                  .########.########.....###....########.########.####.##....##.........####.##....##.########.########.########..##....##....###....##......
+#                  ....##....##.....##...##.##...##.......##........##..##...##...........##..###...##....##....##.......##.....##.###...##...##.##...##......
+#                  ....##....##.....##..##...##..##.......##........##..##..##............##..####..##....##....##.......##.....##.####..##..##...##..##......
+#                  ....##....########..##.....##.######...######....##..#####....#######..##..##.##.##....##....######...########..##.##.##.##.....##.##......
+#                  ....##....##...##...#########.##.......##........##..##..##............##..##..####....##....##.......##...##...##..####.#########.##......
+#                  ....##....##....##..##.....##.##.......##........##..##...##...........##..##...###....##....##.......##....##..##...###.##.....##.##......
+#                  ....##....##.....##.##.....##.########.##.......####.##....##.........####.##....##....##....########.##.....##.##....##.##.....##.########
+##########################################################################################################
+boss__traefik__internal__subdomain: traefik-internal
+boss__traefik__internal__manifest_path: "{{manifest_dir_path}}/traefik-internal"
+boss__traefik__internal__namespace_name: kube-system
+# First Usable IP Address = .....: 192.168.1.49
+# Last Usable IP Address = ......: 192.168.1.62
+boss__traefik__internal__service_spec_type: LoadBalancer
+boss__traefik__internal__service_spec_loadBalancerIP: 192.168.1.50
 
 # ---
 # local_release_dir: /tmp/releases
