wip: traefik_internal

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1,4 +1,5 @@
-domain_root: hyenaclan.org
+# domain_root: hyenaclan.org
+domain_root: borglab.duckdns.org
 
 base_dir_path: ~/dev/bossjones/bosslab-playbooks
 dist_dir_path: "{{base_dir_path}}/dist"
@@ -937,6 +938,24 @@ boss__ingress__nginx__service__default_http_backend_labels: |
     # kubernetes.io/minikube-addons: ingress
     # kubernetes.io/minikube-addons-endpoint: ingress
     addonmanager.kubernetes.io/mode: Reconcile
+
+
+
+
+####################################################################################################
+#                  .########.########.....###....########.########.####.##....##.........####.##....##.########.########.########..##....##....###....##......
+#                  ....##....##.....##...##.##...##.......##........##..##...##...........##..###...##....##....##.......##.....##.###...##...##.##...##......
+#                  ....##....##.....##..##...##..##.......##........##..##..##............##..####..##....##....##.......##.....##.####..##..##...##..##......
+#                  ....##....########..##.....##.######...######....##..#####....#######..##..##.##.##....##....######...########..##.##.##.##.....##.##......
+#                  ....##....##...##...#########.##.......##........##..##..##............##..##..####....##....##.......##...##...##..####.#########.##......
+#                  ....##....##....##..##.....##.##.......##........##..##...##...........##..##...###....##....##.......##....##..##...###.##.....##.##......
+#                  ....##....##.....##.##.....##.########.##.......####.##....##.........####.##....##....##....########.##.....##.##....##.##.....##.########
+##########################################################################################################
+boss__traefik__internal__subdomain: traefik-internal
+boss__traefik__internal__manifest_path: "{{manifest_dir_path}}/traefik-internal"
+boss__traefik__internal__namespace_name: traefik-internal-system
+boss__traefik__internal__service_spec_type: LoadBalancer
+boss__traefik__internal__service_spec_loadBalancerIP: 192.168.1.30
 # ---
 # local_release_dir: /tmp/releases
 
