wip: traefik_internal

--- a/extra_playbooks/roles/kubernetes-apps/traefik-internal/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/traefik-internal/tasks/main.yaml
@@ -9,6 +9,7 @@
     src: "{{ item }}.j2"
     dest: "{{ boss__traefik__internal__manifest_path }}/{{ item }}"
   with_items:
+    - "00traefik-namespace.yaml"
     - "00traefik-rbac.yaml"
     - "01traefik-internal-configmap.yaml"
     - "02traefik-internal-service.yaml"
