FEATURE: DHCP Static Routes For Homelab (#3)
* wip: linting to all make tasks

* wip: templating weave-calico

* WIP: fix spacing

* wip: more traefik annotations

* wip: echoserver

* wip: rerendered efk

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -45,6 +45,7 @@ boss__echoserver__ingress_labels: |
   run: nginx
 boss__echoserver__ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__echoserver__service_labels: |
   run: nginx
 boss__echoserver__service__spec_selector: |
@@ -162,6 +163,7 @@ boss__efk__deployment_name: efk
 ##########################################################################################################
 boss__efk__elasticsearch_ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__efk__elasticsearch_ingress_labels: |
   k8s-app: elasticsearch-logging
   kubernetes.io/cluster-service: "true"
@@ -340,6 +342,7 @@ boss__efk__kibana_ingress_labels: |
     boss-part-of: efk
 boss__efk__kibana_ingress_annotations: |
     nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+    traefik.frontend.rule.type: PathPrefix
 boss__efk__kibana_service_labels: |
     k8s-app: kibana-logging
     kubernetes.io/cluster-service: "true"
@@ -378,6 +381,7 @@ boss__registry__tls_cert_cluster_issuer_name: selfsigning-issuer
 boss__registry__ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
   nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+  traefik.frontend.rule.type: PathPrefix
 
 boss__registry__ingress_labels: |
   k8s-app: registry
@@ -497,6 +501,7 @@ boss__registry__ui__tls_cert_cluster_issuer_name: selfsigning-issuer
 boss__registry__ui__ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
   nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+  traefik.frontend.rule.type: PathPrefix
 
 boss__registry__ui__ingress_labels: |
   k8s-app: registry-ui
@@ -618,7 +623,8 @@ boss__jenkins__ingress_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: jenkins
 boss__jenkins__ingress_annotations: |
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__jenkins__service_labels: |
     k8s-app: jenkins
     kubernetes.io/cluster-service: "true"
@@ -683,7 +689,8 @@ boss__heapster__ingress_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: heapster
 boss__heapster__ingress_annotations: |
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__heapster__service_labels: |
     k8s-app: heapster
     kubernetes.io/cluster-service: "true"
@@ -747,7 +754,8 @@ boss__metrics__server__ingress_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: metrics-server
 boss__metrics__server__ingress_annotations: |
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__metrics__server__service_labels: |
     k8s-app: metrics-server
     kubernetes.io/cluster-service: "true"
@@ -812,7 +820,8 @@ boss__external__dns__ingress_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: external-dns
 boss__external__dns__ingress_annotations: |
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__external__dns__service_labels: |
     k8s-app: external-dns
     kubernetes.io/cluster-service: "true"
@@ -973,6 +982,9 @@ boss__weave__scope__manifest_path: "{{manifest_dir_path}}/weave-scope"
 boss__weave__scope__namespace_name: weave
 boss__weave__scope__manifest_filename_based_on_networking: "weave-calico-networking.yaml"
 boss__weave__scope__enable_ingress_traefik: "enabled"
+
+boss__weave__scope__ingress_metadata_annotations: |
+  traefik.frontend.rule.type: PathPrefix
 
 # ---
 # local_release_dir: /tmp/releases
