wip: fluentd changes

--- a/containers/fluentd-elasticsearch/Dockerfile
+++ b/containers/fluentd-elasticsearch/Dockerfile
@@ -85,11 +85,16 @@ RUN BUILD_DEPS="make gcc g++ libc6-dev ruby-dev libffi-dev wget bzip2 gnupg dirm
                      $BUILD_DEPS \
     && clean-apt \
     # Ensure fluent has enough file descriptors
-    && ulimit -n 65536
+    && ulimit -n 65536 \
+    && /usr/local/bin/fluentd-ui setup
 
 ENV LD_PRELOAD="/usr/lib/libjemalloc.so.2"
 
 EXPOSE 24224 24220 5170 5140
+
+
+# Expose prometheus metrics / fluentd ui / out_forward / snmp / in_http / in_udp / in_tcp / in_syslog / promitheus-metrics / monitor-agent
+EXPOSE 80 9292 24224 161 9880 5160 5170 5170 5170 24231 24220 5140
 
 # libjemalloc1
 
