wip: kubernetes-manifest

--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -26,7 +26,7 @@ gem "activesupport", "~>5.2.0"
 # gem "fluent-plugin-detect-exceptions", "~>0.0.9"
 # gem "fluent-plugin-prometheus", "~>0.3.0"
 # gem "fluent-plugin-multi-format-parser", "~>1.0.0"
-gem "oj", "~>3.3.1.0"
+gem "oj"
 gem "fluent-logger"
 gem "fluent-mixin-config-placeholders"
 gem "fluent-mixin-plaintextformatter"
